CHANNELMGR-1684 Align with visual change fixes in CHANNELMGR-1660

--- a/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
+++ b/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
@@ -16,10 +16,7 @@
 @import 'variables';
 
 content-editor {
-  // Workaround for Firefox; render scrollbar in content-editor instead of ui-view element
-  &.display-contents {
-    display: contents;
-  }
+  min-height: 0;
 
   .feedback > :last-child {
     margin-bottom: 0;
